# NLP_P22095

./: .gitignore  PROJECT_IMPLEMENTATION.md  README.md  main.py  pyproject.toml  run_assignment.py  run_demo.py
data/: greek_legal_texts.txt  original_texts.txt
data/reconstructed/: reconstruction_results.json
notebooks/: 01_text_reconstruction.ipynb
results/reports/: NLP_Assignment_Report.md
src/: __init__.py
src/masked_language/: greek_legal_text.py
src/semantic_analysis/: __init__.py  embeddings.py  similarity.py  visualization.py
src/text_reconstruction/: __init__.py  custom_pipeline.py  library_pipelines.py
src/utils/: __init__.py  data_loader.py  evaluation.py  report_generator.py
