[tool.poetry]
name = "nlp-assignment-2025"
version = "0.1.0"
description = "Natural Language Processing Assignment 2025 - Text Reconstruction and Semantic Analysis"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
torch = "^2.0.0"
transformers = "^4.30.0"
nltk = "^3.8.0"
spacy = "^3.7.0"
gensim = "^4.3.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.15.0"
wordcloud = "^1.9.0"
textstat = "^0.7.0"
language-tool-python = "^2.7.0"
sentence-transformers = "^2.2.0"
fasttext = "^0.9.2"
datasets = "^2.14.0"
evaluate = "^0.4.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.25.0"
black = "^23.0.0"
flake8 = "^6.0.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 